machine_learning_problem

--- a/python_practices/Machine_learning_music.ipynb
+++ b/python_practices/Machine_learning_music.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "ca6d3334",
+   "id": "96e051ea",
    "metadata": {},
    "outputs": [
     {
@@ -181,7 +181,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "66015603",
+   "id": "4073ff5b",
    "metadata": {},
    "outputs": [
     {
@@ -343,7 +343,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "0ecf8934",
+   "id": "c2835669",
    "metadata": {},
    "outputs": [
     {
@@ -388,8 +388,51 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 9,
+   "id": "19ca6d0a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/mimie/Desktop/anaconda3/lib/python3.9/site-packages/sklearn/base.py:450: UserWarning: X does not have valid feature names, but DecisionTreeClassifier was fitted with feature names\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array(['HipHop', 'Dance'], dtype=object)"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# learning & predicting\n",
+    "import pandas as pd\n",
+    "from sklearn.tree import DecisionTreeClassifier\n",
+    "\n",
+    "music_data = pd.read_csv('music.csv')\n",
+    "X = music_data.drop(columns=['genre'])\n",
+    "\n",
+    "# create an output set\n",
+    "Y = music_data['genre']\n",
+    "\n",
+    "# create object\n",
+    "model = DecisionTreeClassifier()\n",
+    "model.fit(X, Y)\n",
+    "predictions = model.predict([ [21, 1], [22, 0] ])\n",
+    "predictions"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "ed4f0a51",
+   "id": "8c83bb36",
    "metadata": {},
    "outputs": [],
    "source": []
