--- a/python_practices/Machine_learning_music.ipynb
+++ b/python_practices/Machine_learning_music.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "96e051ea",
+   "id": "6177e263",
    "metadata": {},
    "outputs": [
     {
@@ -181,7 +181,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "4073ff5b",
+   "id": "103f78db",
    "metadata": {},
    "outputs": [
     {
@@ -343,7 +343,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "c2835669",
+   "id": "85cb5bbd",
    "metadata": {},
    "outputs": [
     {
@@ -389,7 +389,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "19ca6d0a",
+   "id": "6a420e06",
    "metadata": {},
    "outputs": [
     {
@@ -431,8 +431,50 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 14,
+   "id": "1a9c20a3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.0"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# calculating the accuracy of model\n",
+    "import pandas as pd\n",
+    "from sklearn.tree import DecisionTreeClassifier\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.metrics import accuracy_score\n",
+    "\n",
+    "music_data = pd.read_csv('music.csv')\n",
+    "X = music_data.drop(columns=['genre'])\n",
+    "\n",
+    "# create an output set\n",
+    "Y = music_data['genre']\n",
+    "\n",
+    "# X sets for traing and testing input set\n",
+    "# Y sets for traing and testing output set\n",
+    "X_train, X_test, Y_train, Y_test = train_test_split(X, Y, test_size=0.2 )\n",
+    "\n",
+    "# create object\n",
+    "model = DecisionTreeClassifier()\n",
+    "model.fit(X_train, Y_train)\n",
+    "predictions = model.predict(X_test)\n",
+    "score = accuracy_score(Y_test, predictions)\n",
+    "score"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "8c83bb36",
+   "id": "46f73166",
    "metadata": {},
    "outputs": [],
    "source": []
