model persistence_stage

--- a/python_practices/Machine_learning_music.ipynb
+++ b/python_practices/Machine_learning_music.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "6177e263",
+   "id": "53295016",
    "metadata": {},
    "outputs": [
     {
@@ -181,7 +181,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "103f78db",
+   "id": "cf598e3b",
    "metadata": {},
    "outputs": [
     {
@@ -343,7 +343,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "85cb5bbd",
+   "id": "b800c2de",
    "metadata": {},
    "outputs": [
     {
@@ -389,7 +389,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "6a420e06",
+   "id": "0a5bede6",
    "metadata": {},
    "outputs": [
     {
@@ -431,8 +431,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "1a9c20a3",
+   "execution_count": 22,
+   "id": "5572901e",
    "metadata": {},
    "outputs": [
     {
@@ -441,7 +441,7 @@
        "1.0"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -455,6 +455,7 @@
     "\n",
     "music_data = pd.read_csv('music.csv')\n",
     "X = music_data.drop(columns=['genre'])\n",
+    "\n",
     "\n",
     "# create an output set\n",
     "Y = music_data['genre']\n",
@@ -473,8 +474,64 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 14,
+   "id": "f9fc229e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/mimie/Desktop/anaconda3/lib/python3.9/site-packages/sklearn/base.py:450: UserWarning: X does not have valid feature names, but DecisionTreeClassifier was fitted with feature names\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array(['HipHop'], dtype=object)"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# model persistence\n",
+    "\n",
+    "import pandas as pd\n",
+    "from sklearn.tree import DecisionTreeClassifier\n",
+    "import joblib\n",
+    "\n",
+    "music_data = pd.read_csv('music.csv')\n",
+    "X = music_data.drop(columns=['genre'])\n",
+    "\n",
+    "# create an output set\n",
+    "Y = music_data['genre']\n",
+    "\n",
+    "# create object\n",
+    "model = DecisionTreeClassifier()\n",
+    "model.fit(X, Y)\n",
+    "          \n",
+    "model = joblib.load('music-recommender.joblib')\n",
+    "\n",
+    "predictions = model.predict([ [21, 1] ])\n",
+    "predictions\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "46f73166",
+   "id": "ada0a48f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "886e853a",
    "metadata": {},
    "outputs": [],
    "source": []
