visualisation a decision_tree

--- a/python_practices/Machine_learning_music.ipynb
+++ b/python_practices/Machine_learning_music.ipynb
@@ -522,11 +522,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "ada0a48f",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# visualisation a decision tree\n",
+    "import pandas as pd\n",
+    "from sklearn.tree import DecisionTreeClassifier\n",
+    "from sklearn import tree\n",
+    "\n",
+    "\n",
+    "music_data = pd.read_csv('music.csv')\n",
+    "X = music_data.drop(columns=['genre'])\n",
+    "\n",
+    "# create an output set\n",
+    "Y = music_data['genre']\n",
+    "\n",
+    "# create object\n",
+    "model = DecisionTreeClassifier()\n",
+    "model.fit(X, Y)\n",
+    "tree.export_graphviz(model, out_file='music-recommender.dot',\n",
+    "                    feature_names=['age', 'gender'],\n",
+    "                    class_names=sorted(Y.unique()),\n",
+    "                    label='all',\n",
+    "                    rounded=True,\n",
+    "                    filled=True)"
+   ]
   },
   {
    "cell_type": "code",
